# mnist-ieee-754-oof

./: .gitignore  pyproject.toml
src/: main.py
src/lib/: activation_functions.py  data_processing.py  evaluation.py  propagation.py  train.py
