[tool.poetry]
name = "mnist-off"
version = "0.1.0"
description = ""
authors = ["Sax Dhiut <mail@iyxeyl.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.1"
pandas = "^2.0.3"
matplotlib = "^3.7.2"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.7.0"
mypy = "^1.4.1"
ruff = "^0.0.277"
vulture = "^2.7"
pandas-stubs = "^2.0.2.230605"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120